# hexapode_ihm-

./: Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac
Debug/: Makefile  config.status
Debug/src/: Makefile
autom4te.cache/: output.1  requests  traces.1
src/: Makefile  Makefile.am  Makefile.in  client.cc  client.h  client.py  client.py~  hexapode_ihm.py  hexapode_ihm.py~  hexapode_ihm.ui  point.py  point.py~
